Update API URL to Cloudflare Tunnel

--- a/register-form.html
+++ b/register-form.html
@@ -237,7 +237,7 @@
             };
 
             // ส่งข้อมูลไปยัง API
-            fetch('http://146.190.82.178/api/register', {
+            fetch('https://extra-captain-stanford-msgid.trycloudflare.com/api/register', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
