Update to custom domain nice-ppn.studio

--- a/register-form.html
+++ b/register-form.html
@@ -237,7 +237,7 @@
             };
 
             // ส่งข้อมูลไปยัง API
-            fetch('https://total-schemes-boating-bar.trycloudflare.com/api/register', {
+            fetch('https://nice-ppn.studio/api/register', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
