--- a/register-form.html
+++ b/register-form.html
@@ -182,7 +182,7 @@
 
     <script>
         // LIFF ID - ต้องแทนที่ด้วย LIFF ID จริงหลังจากสร้างใน LINE Developers Console
-        const LIFF_ID = '2008428219-5lm0W9xl'; 
+        const LIFF_ID = '2008451052-ZokMx9Jm'; 
         
         // เริ่มต้น LIFF
         window.onload = async function() {
