--- a/checkin.html
+++ b/checkin.html
@@ -119,7 +119,7 @@
 
     async function autoSendLocation() {
       try {
-        const LIFF_ID = "2008451052-ZokMx9Jm"; // ใส่ LIFF ID จาก Login Channel
+        const LIFF_ID = "2008451052-lENrQxbq"; // ใส่ LIFF ID จาก Login Channel
         
         updateStatus('ระบบลงเวลา');
 
