Fix ID card pattern validation

--- a/register-form.html
+++ b/register-form.html
@@ -119,8 +119,8 @@
                 <!-- เลขบัตรประชาชน -->
                 <div class="mb-3">
                     <label for="idCard" class="form-label fw-semibold small">เลขบัตรประชาชน <span class="text-orange">*</span></label>
-                    <input type="text" class="form-control" id="idCard" name="idCard" placeholder="x-xxxx-xxxxx-xx-x" pattern="[0-9]{13}" maxlength="13" required>
-                    <small class="text-muted">กรอกเลขบัตรประชาชน 13 หัก (ไม่ต้องมีขีด)</small>
+                    <input type="text" class="form-control" id="idCard" name="idCard" placeholder="1234567890123" minlength="13" maxlength="13" required>
+                    <small class="text-muted">กรอกเลขบัตรประชาชน 13 หลัก (ไม่ต้องมีขีด)</small>
                 </div>
 
                 <!-- คำนำหน้า -->
